package e_commerce;

public abstract class MetodoPago {

    public abstract void procesarPago(double importe);
}
